unpackaged/main/default/objects/NF_Agent_State_History__c/NF_Agent_State_History__c.object-meta.xml
<CustomObject>
    <label>Agent State History</label>
    <nameField>
        <displayFormat>ASH-{00000}</displayFormat>
        <label>Agent State History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent State Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>