unpackaged/main/default/objects/NF_Agent_State_History__c/fields/AgentSessionId__c.field-meta.xml
<CustomField>
    <fullName>AgentSessionId__c</fullName>
    <label>AgentSessionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>