unpackaged/main/default/objects/NF_Agent_State_History__c/fields/AgentStateId__c.field-meta.xml
<CustomField>
    <fullName>AgentStateId__c</fullName>
    <label>AgentStateId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>