unpackaged/main/default/objects/NF_Agent_State_History__c/fields/AgentStateName__c.field-meta.xml
<CustomField>
    <fullName>AgentStateName__c</fullName>
    <label>AgentStateName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>