unpackaged/main/default/objects/NF_Agent_State_History__c/fields/OutStateDescription__c.field-meta.xml
<CustomField>
    <fullName>OutStateDescription__c</fullName>
    <label>OutStateDescription</label>
    <type>TextArea</type>
</CustomField>