unpackaged/main/default/objects/NF_Agent_State_History__c/fields/OutStateId__c.field-meta.xml
<CustomField>
    <fullName>OutStateId__c</fullName>
    <label>OutStateId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>