unpackaged/main/default/objects/NF_Agent_State_History__c/fields/Specific_Id__c.field-meta.xml
<CustomField>
    <fullName>Specific_Id__c</fullName>
    <label>AgentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>