unpackaged/main/default/objects/NF_Agent_State_History__c/fields/StationName__c.field-meta.xml
<CustomField>
    <fullName>StationName__c</fullName>
    <label>StationName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>